<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient" >


    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="1.5in"
        android:layout_height="wrap_content"
        android:hint="username"
        android:background="#11000000"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="1.5in"
        android:layout_height="wrap_content"
        android:hint="email"
        android:id="@+id/emailEdit"
        android:background="#11000000"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="1.5in"
        android:layout_height="wrap_content"
        android:hint="phone number"
        android:id="@+id/phoneEdit"
        android:background="#11000000"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="1.5in"
        android:layout_height="wrap_content"
        android:hint="password"
        android:id="@+id/passwordEdit"
        android:background="#11000000"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="1.5in"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        android:layout_marginTop="20dp"
        android:background="#00ffa6"
        android:layout_gravity="center" />


</LinearLayout>