...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwipingActivity"
    android:background="@drawable/gradient">

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ffeee9e2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...

    <RelativeLayout
        android:layout_width="416dp"
        android:layout_height="?android:attr/windowTitleSize">

        <Button
            android:id="@+id/toMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
...
