<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="200dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/email"
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:background="#11000000"
            android:hint="email"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:hint="password"
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:background="#11000000"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/login"
            android:layout_marginTop="20dp"
            android:background="#00ffa6"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>